metadata-classic/objects/SelfServiceConfiguration__c.object
<CustomObject>
    <description>Custom object used to manage the customer-facing self-service page (help.thumbtack.com).</description>
    <fields>
        <fullName>AvailableForCustomers__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is used directly by the page. Setting this to true will make this topic / subtopic available for customers in the self service page.</inlineHelpText>
        <label>Available for Customers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AvailableForProfessionals__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is used directly by the page. Setting this to true will make this topic / subtopic available for pros in the self service page.</inlineHelpText>
        <label>Available for Professionals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AvailableOnSupportPage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is used directly by the page. Setting this to true will make this topic / sub-topic available to see in the self service page.</inlineHelpText>
        <label>Available on Support Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConfigExternalID__c</fullName>
        <externalId>true</externalId>
        <label>Config External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ConfigurationJSON__c</fullName>
        <inlineHelpText>This field is used directly by the page.</inlineHelpText>
        <label>Configuration JSON</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GAAction__c</fullName>
        <description>Action for Google Analytics</description>
        <label>GA: Action</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GACategory__c</fullName>
        <description>Category for Google Analytics</description>
        <label>GA: Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GALabel__c</fullName>
        <description>Formula field for Google Analytics Label. If SSC is available for customer and pros, returns &quot;Customer and Pro&quot;. If SSC is available for customer only, returns &quot;Customer&quot;. Else, returns &quot;Pro&quot;.</description>
        <formula>IF(( AvailableForCustomers__c &amp;&amp;  AvailableForProfessionals__c ), &quot;Customer and Pro&quot;,  IF(AvailableForCustomers__c, &quot;Customer&quot;, &quot;Pro&quot;) )</formula>
        <label>GA: Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAValue__c</fullName>
        <description>Value for Google Analytics</description>
        <label>GA: Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KnowledgeCategorySortOrder__c</fullName>
        <inlineHelpText>This field is used directly by the page. It determines the sorting for topics / subtopics.</inlineHelpText>
        <label>Topic Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MasterConfiguration__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is used directly by the page. It indicates the default record used by the page when another self-service configuration record is not selected. There should only ever be one self-service record marked as the master.</inlineHelpText>
        <label>Master Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PGConfigurationJSON__c</fullName>
        <description>Text area used to stored JSON to configure the PG (property damage guarantee) form fields and instructions.</description>
        <label>PG Case Field Override JSON</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is used directly by the page. If there is a parent record, the record is a sub-topic. If there is not a parent record, the record is a topic.</inlineHelpText>
        <label>Parent</label>
        <referenceTo>SelfServiceConfiguration__c</referenceTo>
        <relationshipLabel>Self Service Configurations</relationshipLabel>
        <relationshipName>ChildConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Self Service Configuration</label>
    <listViews>
        <fullName>x1Topics</fullName>
        <columns>NAME</columns>
        <columns>KnowledgeCategorySortOrder__c</columns>
        <columns>AvailableOnSupportPage__c</columns>
        <columns>AvailableForProfessionals__c</columns>
        <columns>AvailableForCustomers__c</columns>
        <columns>MasterConfiguration__c</columns>
        <columns>GAAction__c</columns>
        <columns>GAValue__c</columns>
        <columns>ConfigurationJSON__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ParentId__c</field>
            <operation>equals</operation>
        </filters>
        <label>1a: All Topics</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x1TopicsCustomers</fullName>
        <columns>NAME</columns>
        <columns>KnowledgeCategorySortOrder__c</columns>
        <columns>AvailableOnSupportPage__c</columns>
        <columns>AvailableForProfessionals__c</columns>
        <columns>AvailableForCustomers__c</columns>
        <columns>MasterConfiguration__c</columns>
        <columns>GAAction__c</columns>
        <columns>GAValue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ParentId__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>AvailableForCustomers__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>3a: Topics - Customers</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x1TopicsPros</fullName>
        <columns>NAME</columns>
        <columns>KnowledgeCategorySortOrder__c</columns>
        <columns>AvailableOnSupportPage__c</columns>
        <columns>AvailableForProfessionals__c</columns>
        <columns>AvailableForCustomers__c</columns>
        <columns>MasterConfiguration__c</columns>
        <columns>GAAction__c</columns>
        <columns>GAValue__c</columns>
        <columns>GACategory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ParentId__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>AvailableForProfessionals__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>2a: Topics - Pros</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x2SubTopicsAll</fullName>
        <columns>NAME</columns>
        <columns>ParentId__c</columns>
        <columns>KnowledgeCategorySortOrder__c</columns>
        <columns>AvailableOnSupportPage__c</columns>
        <columns>AvailableForProfessionals__c</columns>
        <columns>AvailableForCustomers__c</columns>
        <columns>MasterConfiguration__c</columns>
        <columns>GAAction__c</columns>
        <columns>GAValue__c</columns>
        <columns>GACategory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ParentId__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>1b: All Sub Topics</label>
    </listViews>
    <listViews>
        <fullName>x2SubTopicsCustomers</fullName>
        <columns>ParentId__c</columns>
        <columns>NAME</columns>
        <columns>KnowledgeCategorySortOrder__c</columns>
        <columns>AvailableOnSupportPage__c</columns>
        <columns>AvailableForProfessionals__c</columns>
        <columns>AvailableForCustomers__c</columns>
        <columns>MasterConfiguration__c</columns>
        <columns>GAAction__c</columns>
        <columns>GAValue__c</columns>
        <columns>GACategory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ParentId__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>AvailableForCustomers__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>3b: Sub Topics - Customers</label>
    </listViews>
    <listViews>
        <fullName>x2SubTopicsPros</fullName>
        <columns>NAME</columns>
        <columns>ParentId__c</columns>
        <columns>KnowledgeCategorySortOrder__c</columns>
        <columns>AvailableOnSupportPage__c</columns>
        <columns>AvailableForProfessionals__c</columns>
        <columns>AvailableForCustomers__c</columns>
        <columns>MasterConfiguration__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>GAAction__c</columns>
        <columns>GAValue__c</columns>
        <columns>ConfigurationJSON__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ParentId__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>AvailableForProfessionals__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>2b: Sub Topics - Pros</label>
    </listViews>
    <listViews>
        <fullName>x4All</fullName>
        <columns>NAME</columns>
        <columns>KnowledgeCategorySortOrder__c</columns>
        <columns>ParentId__c</columns>
        <columns>AvailableForCustomers__c</columns>
        <columns>AvailableForProfessionals__c</columns>
        <columns>AvailableOnSupportPage__c</columns>
        <columns>MasterConfiguration__c</columns>
        <columns>ConfigExternalID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>4: All</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Self Service Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Self Service Configurations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>